fix height scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -19,7 +19,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 2px;
-  hight: 2px;
+  height: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
